refonte/swf-new-style.css
/* ... */
/* NAVBAR */

.logo>a>img {
    margin-top: 6px;
    width: 160px;
}


/* new classes */
.full-viewport {
    width: 100vw;
    position: relative;
    left: calc(-50vw + 50%);
}

#track-record {
    margin: 4em 0;
}

#track-record a {
    cursor: default;
}



.font-xxxl {
    font-size: 350%;
    line-height: 120%;
}

#teamPartnersLogos {
    height: 230px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-image: url(https://storage.googleapis.com/swf-bucket/files/1697576279778-partnerTeams.png);
}
}

/*expendable?*/
.highlight {
    color: var(--light-set-primary);
}


/* arrow frames */


.arrow-frame-diagonal-bottom {
    border: 20px solid;
    border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path d="m15,.5v3.99c0,.28.23.5.5.5h3.99c.28,0,.5.23.5.5v3.99c0,.28.23.5.5.5h3.99c.28,0,.5-.23.5-.5V2.5c0-1.38-1.12-2.5-2.5-2.5h-6.99c-.28,0-.5.23-.5.5Z" fill="%230075ff"/><path d="m10,24.5v-3.99c0-.28-.23-.5-.5-.5h-3.99c-.28,0-.5-.23-.5-.5v-3.99c0-.28-.23-.5-.5-.5H.5c-.28,0-.5.23-.5.5v6.99c0,1.38,1.12,2.5,2.5,2.5h6.99c.28,0,.5-.23.5-.5Z" fill="%230075ff"/></svg>');
    border-image-slice: 41%;
}

.arrow-frame-diagonal-top {
    border: 20px solid;
    border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path class="st0" d="M24.5,15h-4c-0.3,0-0.5,0.2-0.5,0.5v4c0,0.3-0.2,0.5-0.5,0.5h-4c-0.3,0-0.5,0.2-0.5,0.5v4c0,0.3,0.2,0.5,0.5,0.5h7c1.4,0,2.5-1.1,2.5-2.5v-7C25,15.2,24.8,15,24.5,15L24.5,15z" fill="%230075ff"/><path class="st0" d="M0.5,10h4C4.8,10,5,9.8,5,9.5v-4C5,5.2,5.2,5,5.5,5h4C9.8,5,10,4.8,10,4.5v-4C10,0.2,9.7,0,9.5,0h-7C1.1,0,0,1.1,0,2.5v7C0,9.8,0.2,10,0.5,10L0.5,10z" fill="%230075ff"/></svg>');
    border-image-slice: 41%;
}

.arrow-frame-top-right {
    border: 20px solid;
    border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path class="st0" d="M15,0.5v4C15,4.8,15.2,5,15.5,5h4C19.8,5,20,5.2,20,5.5v4c0,0.3,0.2,0.5,0.5,0.5h4c0.3,0,0.5-0.2,0.5-0.5v-7C25,1.1,23.9,0,22.5,0h-7C15.2,0,15,0.2,15,0.5L15,0.5z" fill="%230075ff"/></svg>');
    border-image-slice: 41%;
}

.arrow-frame-top-left {
    border: 20px solid;
    border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path class="st0" d="M0.5,10h4C4.8,10,5,9.8,5,9.5v-4C5,5.2,5.2,5,5.5,5h4C9.8,5,10,4.8,10,4.5v-4C10,0.2,9.7,0,9.5,0h-7C1.1,0,0,1.1,0,2.5v7C0,9.8,0.2,10,0.5,10L0.5,10z" fill="%230075ff"/></svg>');
    border-image-slice: 41%;
}


/*HOME*/


#hero-container {
    width: 100%;
    padding: 40px;
    margin: 80px 0;
}

#hero {
    text-align: center;
    border: 40px solid;
    width: 100%;
    height: 300px;
    box-sizing: border-box;
    margin: auto;
    border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path d="m15,.5v3.99c0,.28.23.5.5.5h3.99c.28,0,.5.23.5.5v3.99c0,.28.23.5.5.5h3.99c.28,0,.5-.23.5-.5V2.5c0-1.38-1.12-2.5-2.5-2.5h-6.99c-.28,0-.5.23-.5.5Z" fill="%230075ff"/><path d="m10,24.5v-3.99c0-.28-.23-.5-.5-.5h-3.99c-.28,0-.5-.23-.5-.5v-3.99c0-.28-.23-.5-.5-.5H.5c-.28,0-.5.23-.5.5v6.99c0,1.38,1.12,2.5,2.5,2.5h6.99c.28,0,.5-.23.5-.5Z" fill="%230075ff"/></svg>');
    border-image-slice: 40%;
    border-image-width: 1;
    border-image-outset: 1;
    display: inline-block;

}


.illustrationEntrepreneur {
    margin: 4em auto;
}

.box-block>img {
    margin-top: 2em;
    margin-bottom: 5em;
}

#tarifsroles h2 {
    margin-top: 2em;
    ;
}


/* FONTICONE */
@font-face {
    font-family: "sowefont";
    src: url("https://d10ib5h62k7mu8.cloudfront.net/assets/fonts/sowefont.eot?a4f58212e472359cd8372b6b8665db97");
    src: url("https://d10ib5h62k7mu8.cloudfront.net/assets/fonts/sowefont.eot?a4f58212e472359cd8372b6b8665db97#iefix") format("embedded-opentype"), url("https://d10ib5h62k7mu8.cloudfront.net/assets/fonts/sowefont.woff?a4f58212e472359cd8372b6b8665db97") format("woff"), url("https://d10ib5h62k7mu8.cloudfront.net/assets/fonts/sowefont.ttf?a4f58212e472359cd8372b6b8665db97") format("truetype");
    font-weight: 400;
    font-style: normal
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
    font-family: "sowefont";
    display: inline-block;
    line-height: 1;
    font-weight: 400;
    font-style: normal;
    speak: none;
    text-decoration: inherit;
    text-transform: none;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

.icon-asterisque:before {
    content: "\f101"
}

.icon-attente:before {
    content: "\f102"
}

.icon-attention:before {
    content: "\f103"
}

.icon-avis:before {
    content: "\f104"
}

.icon-cadenas-rond:before {
    content: "\f105"
}

.icon-cadenas:before {
    content: "\f106"
}

.icon-carte-rond:before {
    content: "\f107"
}

.icon-carte:before {
    content: "\f108"
}

.icon-cheque-rond:before {
    content: "\f109"
}

.icon-cheque:before {
    content: "\f10a"
}

.icon-coeur-rond:before {
    content: "\f10b"
}

.icon-coeur:before {
    content: "\f10c"
}

.icon-commentaire:before {
    content: "\f10d"
}

.icon-contact:before {
    content: "\f10e"
}

.icon-couronne:before {
    content: "\f10f"
}

.icon-croix-rond:before {
    content: "\f110"
}

.icon-croix:before {
    content: "\f111"
}

.icon-divers:before {
    content: "\f112"
}

.icon-document:before {
    content: "\f113"
}

.icon-embed:before {
    content: "\f114"
}

.icon-en-cours-rond:before {
    content: "\f115"
}

.icon-en-cours:before {
    content: "\f116"
}

.icon-engrenage-rond:before {
    content: "\f117"
}

.icon-engrenage:before {
    content: "\f118"
}

.icon-entrepreneur:before {
    content: "\f119"
}

.icon-entreprise:before {
    content: "\f11a"
}

.icon-etoile-tour:before {
    content: "\f11b"
}

.icon-etoile:before {
    content: "\f11c"
}

.icon-euro-rond:before {
    content: "\f11d"
}
/* ... */

